[gd_scene load_steps=69 format=3 uid="uid://dkngdqbm4xoh"]

[ext_resource type="Script" uid="uid://cwjw2qn51ljvu" path="res://scenes/player/scripts/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://dfia0tml7xmxx" path="res://assets/player/1_Dog-principal-vira_lata_caramelo.png" id="2_gmlin"]
[ext_resource type="AudioStream" uid="uid://cbl17mgetrop7" path="res://assets/sounds/bark_sound.wav" id="3_gmlin"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3vyb7"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvxji"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("2_gmlin")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("2_gmlin")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("2_gmlin")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("2_gmlin")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_gmlin")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_gmlin")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_gmlin")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_gmlin")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_gmlin")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_gmlin")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("2_gmlin")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("2_gmlin")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_smehm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}],
"loop": false,
"name": &"bark",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": false,
"name": &"hurt",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": true,
"name": &"lie",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": true,
"name": &"peek",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": true,
"name": &"run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}],
"loop": true,
"name": &"sleep",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dovo2"]
size = Vector2(30, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmlin"]
size = Vector2(28, 30)

[node name="Player" type="CharacterBody2D"]
position = Vector2(11, 325)
disable_mode = 2
script = ExtResource("1_dovo2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(25, -19)
sprite_frames = SubResource("SpriteFrames_smehm")
animation = &"bark"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(25, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("RectangleShape2D_dovo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, -1)
shape = SubResource("RectangleShape2D_gmlin")

[node name="BarkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gmlin")

[node name="BarkSoundTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="BarkSoundTimer" to="." method="_on_bark_sound_timer_timeout"]
